--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@prismx/react-image",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Responsive, lazy, progressive image loader",
   "author": "João Magalhães",
   "license": "MIT",
@@ -12,6 +12,10 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/prism-x/react-image"
+  },
+  "scripts": {
+    "build": "rm -fr dist && env NODE_ENV=production rollup -c",
+    "watch": "rm -fr dist && env NODE_ENV=development rollup -cw"
   },
   "husky": {
     "hooks": {
@@ -34,7 +38,6 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@prismx/eslint-config": "^1.0.1",
     "@rollup/plugin-node-resolve": "^7.1.1",
-    "@rollup/plugin-typescript": "^3.0.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-preset-react-app": "^9.1.1",
     "husky": "^4.2.1",
@@ -45,6 +48,7 @@
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.2",
-    "rollup-plugin-terser": "^5.2.0"
+    "rollup-plugin-terser": "^5.2.0",
+    "rollup-plugin-typescript2": "^0.25.3"
   }
 }
